--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,8 +34,8 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.flash_chat_flutter"
-        minSdkVersion 16
+        applicationId "com.janf.flash_chat_flutter"
+        minSdkVersion 23
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -56,4 +56,7 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation platform('com.google.firebase:firebase-bom:28.3.0')
 }
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
